codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__mcp_startup_header_booting.snap
---
source: tui/src/chatwidget/tests.rs
expression: terminal.backend()
---
"                                                                                "
"• 正在启动 MCP 服务器：alpha (0s • esc 可中断)                                  " Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (16, " "), (18, " "), (20, " "), (22, " "), (40, " "), (42, " "), (44, " ")]
"                                                                                "
"                                                                                "
"› Ask Codex to do anything                                                      "
"                                                                                "
"  ? for shortcuts                                            100% context left  "
